...
            .navigationTitle("Рецепты")
            .toolbar {
                ToolbarItem(placement: .topBarLeading) {
                    Button {
                        showEditor = true
                    } label: {
                        Image(systemName: "plus")
                            .bold()
                    }
                    .tint(.orange)
                }
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
...
